fixed cohort page wrapping

--- a/app/assets/stylesheets/cohorts.css
+++ b/app/assets/stylesheets/cohorts.css
@@ -10,6 +10,10 @@ body {
   text-align: center;
 }
 
+button {
+  cursor: pointer;
+}
+
 h1 {
   font-family: Oswald;
   color: white;
@@ -43,6 +47,7 @@ a {
 .wrapper {
   max-width: 85%;
   margin: 0 auto;
+  white-space: nowrap;
 } 
 
 .wrapper2 {
@@ -85,13 +90,14 @@ a {
 }
 
 .cohort-instructors, .cohort-producers, .cohort-students, .instructor-cohorts {
-  margin: 5px;
   margin-bottom: 20px;
   background: white;
   border-radius: 10px;
   padding-bottom: 5px;
-  overflow: auto;
+  overflow: hidden;
   color: black;
+  margin: 0 auto;
+  margin: 10px;
 }
 
 .instructor-name h1 {
